# proteccion-solar

./: .gitignore  DESIGN.md  README.md  TESTS.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
charts/: __init__.py  sunpath.py  window.py
content/: __init__.py  edu.py
data/: __init__.py  cities.py
docs/: figuras_metodologia.py  metodologia-sombra.md
solar/: __init__.py  geometry.py  position.py  shading.py
tests/: test_geometry.py  test_position.py  test_shading.py
